<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityShare">

    <TextView
        android:id="@+id/confirmation_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginBottom="@dimen/medium_size"
        android:fontFamily="monospace"
        android:text="@string/confirmation_text"
        android:textColor="@color/black"
        android:textSize="@dimen/big_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        tools:textStyle="bold" />

    <!--name-->

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_textView">

    </TextView>

    <TextView
        android:id="@+id/fill_name_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_size"
        android:layout_marginEnd="@dimen/small_size"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/nameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameTV"
        app:layout_constraintTop_toTopOf="@+id/nameTV"
        tools:text="@tools:sample/full_names" />

    <!--email-->

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV">

    </TextView>

    <TextView
        android:id="@+id/fill_email_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_size"
        android:layout_marginEnd="@dimen/small_size"
        android:text="@string/example_mail"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailTV"
        app:layout_constraintTop_toTopOf="@+id/emailTV" />

    <!--phone number-->

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTV">

    </TextView>

    <TextView
        android:id="@+id/fill_phone_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_size"
        android:layout_marginEnd="@dimen/small_size"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneTV"
        app:layout_constraintTop_toTopOf="@+id/phoneTV"
        tools:text="@tools:sample/us_phones" />

    <!--  Button -->

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:text="@string/btn_share"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTV"
        app:backgroundTint="@color/button_color" />

</androidx.constraintlayout.widget.ConstraintLayout>